# dynmat-assn

./: EPTStudy.m  README.md  abq_convergence_model.py  abq_full_model.py  abq_material_definition.py  abq_script_model.py  convergence_job_gen.py  euler_batch_odb_extract.py  euler_job_status.py  euler_job_submission.py  euler_odb_extract.py  euler_plots_from_csv.py  euler_pullFromBox.py  euler_sendToBox.py  job_gen_log.txt  local_job_gen.py  odb_extract.py  pyproject.toml
Matlab-PostProcessing/: absorbedEnergy.m  bendingStudy.m  bendingStudyRelative.m  bigMassPlotDisplacement.asv  bigMassPlotDisplacement.m  bigMassPlotEnergy.m  checkDamage.m  checkDeletedElementFile.m  dataExtraction.m  dataExtractionConv.m  data_clamped.mat  getMassForLabel.asv  getMassForLabel.m  mass.m  mass_calc.m  rigidIndenterStudy.m  test.m
